# snowflake-demo-pack

./: .gitignore  ARCHIVE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
architecture/: blueprint.json
common/: __init__.py  connection.py  data_generators.py  setup.sql
demos/01-finance-fraud-detection/: 01-setup.sql  02-load-data.py  03-fraud-model.py  04-analytics.sql  05-dashboard.py  README.md  architecture.md  value-case.md
demos/02-retail-customer-360/: 01-setup.sql  02-load-data.py  03-fraud-model.py  04-analytics.sql  05-dashboard.py  README.md  architecture.md  value-case.md
demos/03-manufacturing-predictive-maintenance/: 01-setup.sql  02-load-data.py  03-fraud-model.py  04-analytics.sql  05-dashboard.py  README.md  architecture.md  value-case.md
demos/04-healthcare-ehr-governed-analytics/: 01-setup.sql  02-load-data.py  03-fraud-model.py  04-analytics.sql  05-dashboard.py  README.md  architecture.md  value-case.md
demos/05-media-content-recommendation/: 01-setup.sql  02-load-data.py  03-fraud-model.py  04-analytics.sql  05-dashboard.py  README.md  architecture.md  value-case.md
docs/: cloud-ai-architecture.md  cost-estimates.md  customization-guide.md  how-to-use.md
docs/adr/: 001-synthetic-data-approach.md  002-industry-feature-mapping.md
docs/architecture/: blueprint.json
presentations/: finance-5min-pitch.md  healthcare-5min-pitch.md  manufacturing-5min-pitch.md  media-5min-pitch.md  retail-5min-pitch.md
scripts/: run_all.sh  teardown.sh
tests/: test_data_generators.py
