[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowflake-demo-pack"
version = "1.0.0"
description = "Production-quality Snowflake industry demo library for Solution Engineers"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Doeon Kim", email = "doeon.kim@example.com" }
]
requires-python = ">=3.11"
keywords = [
    "snowflake",
    "demo",
    "solution-engineering",
    "data-platform",
    "analytics",
    "fraud-detection",
    "customer-360",
    "predictive-maintenance",
    "healthcare-analytics",
    "content-recommendation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "snowflake-connector-python>=3.7.0",
    "snowflake-snowpark-python>=1.14.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "faker>=24.0.0",
    "pydantic>=2.5.0",
    "streamlit>=1.32.0",
    "plotly>=5.19.0",
    "scikit-learn>=1.4.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "sqlfluff>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/KIM3310/snowflake-demo-pack"
Repository = "https://github.com/KIM3310/snowflake-demo-pack"
Issues = "https://github.com/KIM3310/snowflake-demo-pack/issues"

[tool.setuptools.packages.find]
include = ["common*", "demos*"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.sqlfluff.core]
dialect = "snowflake"
templater = "raw"
sql_file_exts = ".sql"
max_line_length = 120
exclude_rules = "L034,L016"

[tool.sqlfluff.indentation]
tab_space_size = 4
indent_unit = "space"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "upper"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
